# disc01

./: CMakeLists.txt  README.md  filter.cpp  filter_sol.cpp  image.cpp  image.h  image_sol.cpp
filters/: box_3x3.filt  box_4x4.filt  box_9x9.filt  gauss_19x19_sig8.filt  gauss_7x7_sig1.filt  gauss_7x7_sig2.filt  gauss_7x7_sig4.filt  gauss_7x7_sig8.filt
